Fixed some icon spacing

--- a/src/styles/content-sections.sass
+++ b/src/styles/content-sections.sass
@@ -42,7 +42,7 @@
       display: block
       background: $color-dark
       width: 25%
-      height: 3px
+      height: 2px
       margin: 1.1em auto
     p:first-of-type
       margin-top: 0
@@ -162,7 +162,7 @@
       align-items: center
       justify-content: space-between
       .proj-name
-        font-size: 1.6rem
+        font-size: 1.8rem
         font-weight: 500
         color: $color-primary-darker
         white-space: pre-wrap
@@ -170,18 +170,21 @@
       .proj-links
         margin: 0 0.2em
         display: flex
-        //align-items: flex-end
-        //justify-content: flex-end
+        align-items: flex-end
+        justify-content: flex-end
+        .proj-link-icon-container
+          padding: 0.15em
         .proj-link-icon-container:hover
-          //background: lightgray
-          //transition: background 200ms linear
+          background: lightgray
+          transition: background 150ms linear
         .icon
+          display: block
           //border: 1px solid green
           height: 1.25em
           width: 1.25em
           max-height: unset
           max-width: unset
-          margin-right: 0.5em
+          margin: 0 0.25em
     .proj-desc
       font-size: 1.2rem
       margin: 1em 0
@@ -212,6 +215,7 @@
         display: grid
         grid-template: repeat(auto-fit, minmax(20%, 1fr)) / repeat(auto-fit, minmax(20%, 1fr))
         grid-gap: 1em 0.35em
+        cursor: default
         .proj-tech-list-item
           display: flex
           flex-direction: column
