--- a/src/styles/separators.sass
+++ b/src/styles/separators.sass
@@ -55,5 +55,5 @@ footer
       fill: #2a3f54
     .wave-part-3
       fill: rgb(34, 49, 63)
-      fill: $color-background
+      fill: $color-background-alt
       //background: transparent
